--- a/module2-solution/css/styles_for_assignment.css
+++ b/module2-solution/css/styles_for_assignment.css
@@ -1,1 +1,68 @@
+*{
+	box-sizing: border-box;
+}
+body{
+	background-color: rgba(80, 80, 80,0.5);
+}
+h1{
+	text-align: center;
+	font-family: Verdana;
+}
+div{
+	background-color: gray;
+	display: inline-block;
+	padding: 5px;
+	border: 2px solid black;
+}
+#subheading1{
+	background-color: black;
+	color: red;
+	position: relative;
+	left: 313px;
+	bottom: 25px;
+}
+#subheading2{
+	background-color: black;
+	color: green;
+	position: relative;
+	left: 337px;
+	bottom: 25px;
+}
+#subheading3{
+	background-color: black;
+	color: blue;
+	position: relative;
+	left: 303px;
+	bottom: 27px;
+}
 
+/*Desktop view*/
+
+@media (max-height: 992px) {
+	div{
+		width: 400px;
+	}
+	#right{
+	float: right;
+}
+div{
+	background-color: gray;
+	display: inline-block;
+	padding: 5px;
+	border: 2px solid black;
+}
+#subheading1{
+	width: 80px;
+}
+#subheading2{
+	width: 55px;
+}
+#subheading3{
+	width: 90px;
+}
+#pushed{
+	position: relative;
+	left: 75px;
+}
+
+}
